--- a/site/views/footer.erb
+++ b/site/views/footer.erb
@@ -1,3 +1,4 @@
 <a href="/">Index</a>
 <a href="/about">About</a>
 <a href="/contact" rel="nofollow">Contact</a>
+<a href="http://www.google.com">Google</a>
